{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 67,
  "lineage": "4f1e0128-5b06-b33b-a0dd-2de1b3954c0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_assessment_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:279660579228:internet-gateway/igw-040d0d0eaaef4f741",
            "id": "igw-040d0d0eaaef4f741",
            "owner_id": "279660579228",
            "tags": {
              "Name": "devops_assessment_igw"
            },
            "tags_all": {
              "Name": "devops_assessment_igw"
            },
            "vpc_id": "vpc-026c8adbbdd34f254"
          },
          "dependencies": [
            "aws_vpc.devops_assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_assessment_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:279660579228:route-table/rtb-06ef8f4c249626a09",
            "id": "rtb-06ef8f4c249626a09",
            "owner_id": "279660579228",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040d0d0eaaef4f741",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-route"
            },
            "tags_all": {
              "Name": "igw-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c8adbbdd34f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_assessment_igw",
            "aws_vpc.devops_assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:279660579228:security-group/sg-0b0edba160630647c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0edba160630647c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240818161528788500000001",
            "name_prefix": "terraform-",
            "owner_id": "279660579228",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg"
            },
            "tags_all": {
              "Name": "sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-026c8adbbdd34f254"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops_assessment_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:279660579228:subnet/subnet-0816729da4e32856d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.0.0/16",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0816729da4e32856d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "279660579228",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-ap-south-1a"
            },
            "tags_all": {
              "Name": "subnet-ap-south-1a"
            },
            "vpc_id": "vpc-026c8adbbdd34f254"
          },
          "dependencies": [
            "aws_vpc.devops_assessment_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_assessment_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:279660579228:vpc/vpc-026c8adbbdd34f254",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-077b8686fbbc4ed76",
            "default_route_table_id": "rtb-0752a1584c6bcb15f",
            "default_security_group_id": "sg-084ac142f35a0f8a6",
            "dhcp_options_id": "dopt-f27c659a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026c8adbbdd34f254",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0752a1584c6bcb15f",
            "owner_id": "279660579228",
            "tags": {
              "Name": "devopsAssessmentVpc"
            },
            "tags_all": {
              "Name": "devopsAssessmentVpc"
            }
          }
        }
      ]
    }
  ]
}